# hostess_robot

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
cob_people_detection/common/src/: face_recognizer.cpp
cob_people_detection/ros/launch/: detection_tracker_params.yaml  face_detector_params.yaml  face_recognizer_params.yaml  face_recognizer_params.yaml~  head_detector_params.yaml  people_detection_params.yaml
cob_people_detection/ros/src/: detection_tracker_node.cpp  face_recognizer_node.cpp
hostess_full/: CMakeLists.txt  README.md  hostess_patrol_script.sh  package.xml
hostess_full/launch/: hostess_robot.launch  hostess_robot.launch~
hostess_full/launch/include/: hostess_robot.rviz  hostess_user_registration.launch.xml  nav.rviz  openni_processing.launch  people_detection.launch.xml  skeleton_tracker.launch.xml  skeleton_tracker.launch.xml~
hostess_full/log/: README.md
hostess_remote/: CMakeLists.txt  package.xml
hostess_remote/launch/: hostess_robot.launch  sensor_and_tracking.launch
hostess_remote/launch/include/: hostess_robot.rviz  openni_drivers.launch.xml~  openni_processing.launch  people_detection.launch.xml
hostess_robot/: package.xml
hostess_skeleton_tracker/: CMakeLists.txt  CMakeLists.txt~  README.md  Untitled Document  Untitled Document 2  Untitled Document 2~  Untitled Document~  package.xml
hostess_skeleton_tracker/Untitled Folder/: Untitled Document  hostess_pan_controller.cpp
hostess_skeleton_tracker/include/: pan_controller.hpp
hostess_skeleton_tracker/launch/: dynamixel_pan.launch  hostess_skeleton_pan_tracker.launch  launch.launch  launch.launch~
hostess_skeleton_tracker/launch/include/: pan_joint.yaml~
hostess_skeleton_tracker/src/: dynamixel_mediator.cpp  dynamixel_mediator.cpp~  follow_me.cpp  follow_me.cpp~  hand_tracker.cpp  hostess_skeleton_kalman.cpp  hostess_skeleton_tracker.cpp  hostess_skeleton_tracker.cpp~  logger.cpp  multiple_skeleton_tracker.cpp  openni_tracker.cpp  pan_controller.cpp  pan_controller.cpp~  prova.cpp  prova_pan.cpp  prova_pan.cpp~  twist_mediator.cpp  twist_mediator.cpp~
hostess_skeleton_tracker/src/kalman/: kalman_filter.cpp  multiple_skeleton_tracker.cpp
hostess_user_registration/: CMakeLists.txt  CMakeLists.txt~  README.md  app.py  app.py~  data.sqlite  init.sh  package.xml
hostess_user_registration/launch/: hostess_user_registration.launch  hostess_user_registration.launch~
hostess_user_registration/scripts/: app.py  app.py~  data.sqlite
hostess_user_registration/scripts/config/: config.py  jol_gui.yaml~  map.xml
hostess_user_registration/scripts/database/: database.sqlite
hostess_user_registration/scripts/migrations/versions/: 4e2e897f3bc9_add_relation_goal_user.py
hostess_user_registration/scripts/static/: scripts.js  styles.css
hostess_user_registration/scripts/templates/: checkin.html  delete_goals.html  delete_user.html  delete_users.html  goals.html  index.html  login.html  new_goal.html  new_user.html  provamappa.html  register.html  user_calibration.html  user_registration.html  users.html
hostess_user_registration/src/: server.cpp
hostess_user_registration/templates/: image.html  image.html~
launch/: hostess_robot.launch  hostess_robot.launch~  hostess_robot.rviz  hostess_tracker.launch~  openni.launch  openni_processing.launch  people_detection.launch.xml  people_detection.launch.xml~
launch/remote/: hostess_robot.launch  sensor_and_tracking.launch
launch/remote/include/: openni_drivers.launch.xml  openni_processing.launch.xml
src/: hostess_tracker.cpp
